--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/*   
+/*
  * Template Name: Orbit - Responsive Resume/CV Template for Developers
  * Version: 1.0
  * Author: Xiaoying Riley
@@ -9,7 +9,7 @@
 /* styles.css */
 /* ======= Base ======= */
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   color: #545E6C;
   background: #f5f5f5;
   font-size: 14px;
@@ -71,7 +71,7 @@ p {
 }
 .sidebar-wrapper .name {
   font-size: 32px;
-  font-weight: 900;
+  font-weight: 500;
   margin-top: 0;
   margin-bottom: 10px;
 }
@@ -294,7 +294,7 @@ p {
 /* Large devices (large desktops, 1200px and up) */
 /* Ex-Large devices (large desktops, 1200px and up) */
 
-/* 
+/*
 used for profile image
 */
 .profile-img {
