사이드바 업데이트.
언어 섹션 삭제.
indentation.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
             <div class="profile-container">
                 <img class="profile-img" src="{{site.baseurl}}/assets/images/{% if site.pic %}{{ site.pic }}{% else %}profile.png{% endif %}" alt="profile picture" />
                 <h1 class="name">{% if site.name %}{{site.name}}{% else %}Bart(이철민){% endif %}</h1>
-                <h3 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}Full Stack Developer{% endif %}</h3>
+                <h3 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}<strike>Full Stack</strike> Developer{% endif %}</h3>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -17,16 +17,10 @@
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto:alan.doe@website.com">alan.doe@website.com</a></li>
                     {% endif %}
 
-                    {% if site.phone %}
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:{{site.phone}}">{{site.phone}}</a></li>
-                    {% else %}
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:012 345 6789">012 345 6789</a></li>
-                    {% endif %}
-
                     {% if site.website %}
                     <li class="website"><i class="fa fa-globe"></i><a href="http://{{site.website}}" target="_blank">{{site.website}}</a></li>
                     {% else %}
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://blog.webjeda.com" target="_blank">blog.webjeda.com</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="http://bomcat.tistory.com" target="_blank">bomcat.tistory.com</a></li>
                     {% endif %}
 
                     {% if site.linkedin %}
@@ -50,7 +44,6 @@
                 </ul>
             </div><!--//contact-container-->
            {% include education.html %}
-           {% include language.html %}
            {% include interests.html %}
 
 
