설정 파일 내용을 내껄로 수정, 본문 업데이트.

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,45 +1,88 @@
 <section class="section experiences-section">
-                <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
-                
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Lead Developer</h3>
-                            <div class="time">2015 - Present</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Startup Hubs, San Francisco</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>  
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-                    </div><!--//details-->
-                </div><!--//item-->
-                
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Senior Software Engineer</h3>
-                            <div class="time">2014 - 2015</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Google, London</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>  
-                        
-                    </div><!--//details-->
-                </div><!--//item-->
-                
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">UI Developer</h3>
-                            <div class="time">2012 - 2014</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Amazon, London</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>  
-                    </div><!--//details-->
-                </div><!--//item-->
-                
-            </section><!--//section-->
+    <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
+
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Develop Platform Administrator</h3>
+                <div class="time">2013 - Present</div>
+            </div><!--//upper-row-->
+            <div class="company">Daum, Kakao</div>
+        </div><!--//meta-->
+        <div class="details">
+            <p>Confluence, JIRA, Github Enterprise, Nexus, Jenkins, Sonarqube 등의 전사 개발플랫폼의 설치, 업그레이드 및 질의응답, 세미나, 트러블슈팅. 필요한 기능에 대해 플러그인으로 개발 및 유지보수. 기계적인 업무는 Ruby나 Python으로 스크립트 처리를 하거나 Selenium을 이용한 UI 자동화 처리로 생산성 향상.</p>
+        </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Backend Developer</h3>
+                <div class="time">2013 - Present</div>
+            </div><!--//upper-row-->
+            <div class="company">Daum, Kakao</div>
+        </div><!--//meta-->
+        <div class="details">
+            <p>입사 후 제작한 백엔드는 주로 Spring boot로 작업하였음. Spring boot 혹은 python - flask를 이용한 REST api를 제공해주는 서비스 빠르게 개발
+                가능.</p>
+        </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Frontend Developer</h3>
+                <div class="time">2015</div>
+            </div><!--//upper-row-->
+            <div class="company">Daum, Kakao</div>
+        </div><!--//meta-->
+        <div class="details">
+            <p>사내 앱 빌드 & 배포 시스템의 프런트엔드 작업을 Angular1(당시 AngularJS)로 수행. 이 후 프런트엔드쪽으로 더 깊게 공부하진 않지만 간단한 운영툴이나 취미로 만드는 간단한
+                사이트들은 Angular를 이용한 SPA로 <strike>템플릿의 힘을 빌어</strike> 제작 가능.</p>
+        </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Android Developer</h3>
+                <div class="time">2015 - Present</div>
+            </div><!--//upper-row-->
+            <div class="company">Daum, Kakao</div>
+        </div><!--//meta-->
+        <div class="details">
+            <p>사내 베타테스트 중인 앱을 확인하고 내려받아 테스트해볼 수 있는 앱 제작 경험. 새로운 앱이 등장하거나 버전이 올라가면 푸시 알림, 앱 내에서 테스트앱들의 설치와 업데이트를 관리.</p>
+        </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">iOS Developer</h3>
+                <div class="time">2015 - Present</div>
+            </div><!--//upper-row-->
+            <div class="company">Daum, Kakao</div>
+        </div><!--//meta-->
+        <div class="details">
+            <p>위와 동일한 기능을 하는 앱을 똑같이 iOS로 개발. <a href="http://bomcat.tistory.com/entry/iOS-Private-API-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0-Swift">Private api 사용 경험.</a></p>
+        </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Etc. Developer</h3>
+                <div class="time">2013 - Present</div>
+            </div><!--//upper-row-->
+            <div class="company">Daum, Kakao</div>
+        </div><!--//meta-->
+        <div class="details">
+            <p>이 외에도 잉여력을 발산 및 신기술 영접을 위한 여러 개발 활동을 하였음.</p>
+            <ul class="">
+                <li>코틀린을 사용하여 간단한 앱을 만들어보며 <a href="http://bomcat.tistory.com/entry/Keddit-kotlin%EC%9D%84-%EB%B0%B0%EC%9A%B0%EB%A9%B0-%EA%B0%9C%EB%B0%9C%ED%95%98%EB%8A%94-%EC%95%88%EB%93%9C%EB%A1%9C%EC%9D%B4%EB%93%9C-%EC%95%B1"> 가이드 번역.</a></li>
+                <li>사내 봇 컨테스트 참가, 질보단 양으로 많은 봇을 출품시켜 입상함. python 최고.</li>
+            </ul>
+        </div><!--//details-->
+    </div><!--//item-->
+
+</section><!--//section-->
