--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,6 @@
 <section class="section summary-section">
 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
-<div class="summary">
-    <p>개발자입니다. 이렇게 <a href="#" target="_blank">링크도 걸 수 있음.</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+<div class="summary" style="text-align:justify">
+    <p>산전수전 겪은 3년차 개발자입니다. Spring을 이용한 백엔드에서 Angular를 이용한 프런트엔드, iOS, 안드로이드 앱 개발 뿐만 아니라 2500명 이상이 사용하는 Confluence, JIRA, Github Enterprise 및 library repository, CI, CD, 정적 분석 관련 툴에 대해 운영 및 교육, 질의응답, 트러블슈팅을 해왔습니다. 부족한 인력을 메꾸기 위해 자동화 처리에 필사적이며 최근에는 봇 개발에 빠져있습니다.</p>
 </div><!--//summary-->
 </section><!--//section-->
