--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -10,7 +10,8 @@
             <div class="company">Daum, Kakao</div>
         </div><!--//meta-->
         <div class="details">
-            <p>Confluence, JIRA, Github Enterprise, Nexus, Jenkins, Sonarqube 등의 전사 개발플랫폼의 설치, 업그레이드 및 질의응답, 세미나, 트러블슈팅. 필요한 기능에 대해 플러그인으로 개발 및 유지보수. 기계적인 업무는 Ruby나 Python으로 스크립트 처리를 하거나 Selenium을 이용한 UI 자동화 처리로 생산성 향상.</p>
+            <p>Confluence, JIRA, Github Enterprise, Nexus, Jenkins, Sonarqube 등의 전사 개발플랫폼의 설치, 업그레이드 및 질의응답, 세미나, 트러블슈팅.
+                필요한 기능에 대해 플러그인으로 개발 및 유지보수. 기계적인 업무는 Ruby나 Python으로 스크립트 처리를 하거나 Selenium을 이용한 UI 자동화 처리로 생산성 향상.</p>
         </div><!--//details-->
     </div><!--//item-->
 
@@ -64,7 +65,9 @@
             <div class="company">Daum, Kakao</div>
         </div><!--//meta-->
         <div class="details">
-            <p>위와 동일한 기능을 하는 앱을 똑같이 iOS로 개발. <a href="http://bomcat.tistory.com/entry/iOS-Private-API-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0-Swift">Private api 사용 경험.</a></p>
+            <p>위와 동일한 기능을 하는 앱을 똑같이 iOS로 개발. <a
+                    href="http://bomcat.tistory.com/entry/iOS-Private-API-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0-Swift">Private
+                api 사용 경험.</a></p>
         </div><!--//details-->
     </div><!--//item-->
 
@@ -79,8 +82,12 @@
         <div class="details">
             <p>이 외에도 잉여력을 발산 및 신기술 영접을 위한 여러 개발 활동을 하였음.</p>
             <ul class="">
-                <li>코틀린을 사용하여 간단한 앱을 만들어보며 <a href="http://bomcat.tistory.com/entry/Keddit-kotlin%EC%9D%84-%EB%B0%B0%EC%9A%B0%EB%A9%B0-%EA%B0%9C%EB%B0%9C%ED%95%98%EB%8A%94-%EC%95%88%EB%93%9C%EB%A1%9C%EC%9D%B4%EB%93%9C-%EC%95%B1"> 가이드 번역.</a></li>
+                <li>코틀린을 사용하여 간단한 앱을 만들어보며 <a
+                        href="http://bomcat.tistory.com/entry/Keddit-kotlin%EC%9D%84-%EB%B0%B0%EC%9A%B0%EB%A9%B0-%EA%B0%9C%EB%B0%9C%ED%95%98%EB%8A%94-%EC%95%88%EB%93%9C%EB%A1%9C%EC%9D%B4%EB%93%9C-%EC%95%B1">
+                    가이드 번역.</a></li>
                 <li>사내 봇 컨테스트 참가, 질보단 양으로 많은 봇을 출품시켜 입상함. python 최고.</li>
+                <li>AWS, Angular 공부를 위한 사내 오버워치 동호회를 위한 봇서비스, 팀 밸런서.</li>
+                <li>등등..</li>
             </ul>
         </div><!--//details-->
     </div><!--//item-->
