--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,17 +1,18 @@
 <div class="interests-container container-block">
     <h2 class="container-block-title">Interests</h2>
     <ul class="list-unstyled interests-list">
-        <li>오도바이</li>
+        <li><a href="https://www.instagram.com/bart.leee/" target="_blank">오도바이</a></li>
         <li>육아</li>
-        <li>오버워치</li>
+        <li><a href="https://playoverwatch.com/ko-kr/career/pc/kr/%EB%B0%94%ED%8A%B8-31102" target="_blank">오버워치</a></li>
     </ul>
 </div><!--//interests-->
 
-<div class="remove-container container-block">
-    <h2 class="container-block-title">About Theme</h2>
-    <ul class="list-unstyled interests-list">
-        <a href="http://blog.webjeda.com/jekyll-themes/online-cv/">
-            <li>How to use?</li>
-        </a>
-    </ul>
-</div><!--//interests-->
+<!--<div class="remove-container container-block">-->
+    <!--<h2 class="container-block-title">About Theme</h2>-->
+    <!--<ul class="list-unstyled interests-list">-->
+        <!--<a href="http://blog.webjeda.com/jekyll-themes/online-cv/">-->
+            <!--<li>How to use?</li>-->
+        <!--</a>-->
+    <!--</ul>-->
+<!--</div>-->
+<!--//interests-->
