--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -24,8 +24,7 @@
             <div class="company">Daum, Kakao</div>
         </div><!--//meta-->
         <div class="details">
-            <p>입사 후 제작한 백엔드는 주로 Spring boot로 작업하였음. Spring boot 혹은 python - flask를 이용한 REST api를 제공해주는 서비스 빠르게 개발
-                가능.</p>
+            <p>입사 후 제작한 백엔드는 주로 Spring boot로 작업하였음. Spring boot - JPA 혹은 flask(python) - mongodb를 이용한 REST api를 제공해주는 서비스 빠르게 개발 가능.</p>
         </div><!--//details-->
     </div><!--//item-->
 
